--- a/assets/admin-assets/css/style.css
+++ b/assets/admin-assets/css/style.css
@@ -8921,6 +8921,19 @@ select.tt-query:focus::-ms-value,
 select.tt-hint:focus::-ms-value {
   color: #495057;
   background-color: #2A3038; }
+  
+  /*** form Style ***/
+#createNoteForm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  border: 3px solid #ccc;
+  border-radius: 4px;
+  padding: 10%;
+  box-shadow: 0 2px 4px rgb(241, 241, 241);
+}
 
 .form-control-file,
 .form-control-range {
